--- a/templates/create_item.html
+++ b/templates/create_item.html
@@ -2,9 +2,9 @@
 {% block content %}
 
 <div class="row">
-    <div class="col-lg-6">
+    <div class="col-lg-8">
         <div class="form-group col-lg-6">
-            <h1>Create Invoice</h1>
+            <h1>Create Item</h1>
                 <div class="form-outline">
                     <form method="POST" action="/create_item">
                         {{ form.csrf_token }}
