--- a/templates/delete_invoice.html
+++ b/templates/delete_invoice.html
@@ -28,10 +28,16 @@
             </div> <!-- div form-outlne -->
         </div> <!-- div form-group -->
     </div>
-     <div class="right-panel right-panel-table col-sm-4">
-        <div class="table-view">
+     <div class="right-panel right-panel-table col-sm-8">
+        <div class="table-view-quick-access-invoices">
             <table class="table">
                 <thead>
+                    <tr>
+                        <th><h5>Invoices</h5></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                    </tr>
                     <tr>
                         <th>Invoice ID</th>
                         <th>Client ID</th>
