--- a/templates/edit_client_information.html
+++ b/templates/edit_client_information.html
@@ -69,8 +69,8 @@
                 </div> <!-- div form-outlne -->
         </div> <!-- div form-group -->
     </div>
-    <div class="right-panel right-panel-edit col-sm-4">
-        <h3>Current client {{ client.client_id }} informations</h3>
+    <div class="right-panel right-panel-edit col-sm-8">
+        <h3>Current client informations</h3>
         <p>Name : {{ client.name }}</p>
         <p>Email : {{ client.email }}</p>
         <p>Phone : {{ client.phone }}</p>
