--- a/templates/view_invoice.html
+++ b/templates/view_invoice.html
@@ -27,7 +27,7 @@
             </tr>
           </tbody>
       </table>
-      <table class="table invoice-table">
+      <table class="table table-view">
           <thead class="table-dark">
                 <tr>
                   <th>Item ID</th>
