--- a/templates/view_item.html
+++ b/templates/view_item.html
@@ -3,7 +3,8 @@
 {% block content %}
 
       <div class="view">
-          <div class="view-client overflow-hidden">
+          <div class="view-client-item-left">
+          <h4 class="th-client-item">Item description</h4>
           <table class="table">
                 <tbody>
                 <tr>
@@ -21,13 +22,10 @@
               </tbody>
             </table>
           </div>
-          <div class="view-client">
+          <div class="view-item table-view-quick-access">
+              <h4 class="th-client-item">Invoices containing items</h4>
               <table class="table">
                   <thead class="table-dark">
-                  <tr>
-                    <th class="th-client-item">Invoices containing items</th>
-                    <th class="th-client-item"></th>
-                  </tr>
                     <tr>
                       <th>Invoice ID</th>
                       <th>Price per unit</th>
