--- a/templates/base.html
+++ b/templates/base.html
@@ -31,17 +31,6 @@
             </ul>
         </nav>
     </div>
-    {% for message in get_flashed_messages() %}
-      <div class="alert alert-warning">
-        <button
-          type="button"
-          class="close"
-          data-dismiss="alert">
-          x
-        </button>
-        {{ message }}
-      </div>
-    {% endfor %}
 
     <nav id="sidebar" class="sidebar">
         <ul class="sidebar-nav" class="sidebar-nav">
@@ -65,10 +54,13 @@
                         <a href="{{ url_for('create_invoice') }}">Create</a>
                     </li>
                     <li>
-                        <a href="{{ url_for('create_invoice_line') }}">Add lines</a>
+                        <a href="{{ url_for('create_invoice_line') }}">Add invoice lines</a>
                     </li>
                     <li>
-                        <a href="{{ url_for('edit_invoice_get_id') }}">Update</a>
+                        <a href="{{ url_for('edit_invoice_line_get_id') }}">Edit invoice line</a>
+                    </li>
+                    <li>
+                        <a href="{{ url_for('delete_invoice_line') }}">Delete invoice line</a>
                     </li>
                     <li>
                         <a href="{{ url_for('delete_invoice') }}">Delete</a>
@@ -107,6 +99,15 @@
     </nav>
     <div class="main">
         <div class="content">
+            {% with messages = get_flashed_messages() %}
+                  {% if messages %}
+                    <ul class=flashes>
+                    {% for message in messages %}
+                      <li class="alert alert-warning">{{ message }}</li>
+                    {% endfor %}
+                    </ul>
+                  {% endif %}
+                {% endwith %}
             {% block content %}
             {% endblock %}
         </div>
