Bug corrections, comments, titles on html pages

--- a/static/styles/base.css
+++ b/static/styles/base.css
@@ -423,6 +423,12 @@ a:hover {
     width: 150px;
 }
 
+#create-invoice-lines {
+    height:100%;
+    overflow: hidden;
+    overflow: scroll;
+}
+
 .gradient-custom-2 {
 /* fallback for old browsers */
 background: #fccb90;
