--- a/templates/delete_client_confirmation.html
+++ b/templates/delete_client_confirmation.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block title%}Delete client{% endblock %}
 {% block content %}
 <div class="col-lg-6">
     <h2>Do you wish to delete client: ID : {{client.client_id}} - Name : {{client.name}}</h2>
