--- a/templates/view_clients.html
+++ b/templates/view_clients.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block title%}View clients{% endblock %}
 {% block content %}
 <div class="view">
     <div class="page-content">
