--- a/templates/view_clients_by_id.html
+++ b/templates/view_clients_by_id.html
@@ -1,4 +1,5 @@
 {% extends 'view_clients.html' %}
+{% block title%}View clients{% endblock %}
 {% block request_view %}
     <div class="overflow-hidden">
         <div class="views_form">
