--- a/templates/view_invoice.html
+++ b/templates/view_invoice.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% block title%}Invoice {{ invoice.invoice_id }}{% endblock %}
 {% block content %}
   <div class="view-invoice">
       <table class="table">
