--- a/templates/view_invoices_list.html
+++ b/templates/view_invoices_list.html
@@ -1,4 +1,5 @@
 {% extends 'view_invoices.html' %}
+{% block title%}View invoices{% endblock %}
 {% block request_view %}
     <table class="table">
         <thead class="table-dark">
