--- a/templates/view_items_list.html
+++ b/templates/view_items_list.html
@@ -1,4 +1,5 @@
 {% extends 'view_items.html' %}
+{% block title%}View items{% endblock %}
 {% block request_view %}
  <div class="overflow-auto">
     <table class="table">
