--- a/templates/create_client.html
+++ b/templates/create_client.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block title%}Create client{% endblock %}
 {% block content %}
 <div class="row">
     <div class="col-sm-4">
