--- a/templates/create_invoice_line.html
+++ b/templates/create_invoice_line.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
+{% block title%}Create invoice line{% endblock %}
 {% block content %}
 
-<div class="row">
+<div class="row" id="create-invoice-lines">
     <div class="col-sm-4">
         <div class="form-group col-sm-10">
             <h1>Add invoice lines</h1>
@@ -126,7 +127,7 @@
                     <tbody>
                         {% for invoice in invoices %}
                         <tr>
-                            <td>{{invoice[0].invoice_id}}</td>
+                            <td><a href="{{ url_for('view_invoice', invoice_id=invoice[0].invoice_id) }}">{{invoice[0].invoice_id}}</a></td>
                             <td>{{invoice[0].client_id}}</td>
                             <td>{{invoice.name}}</td>
                             <td>{{invoice[0].total}}</td>
