--- a/templates/delete_client.html
+++ b/templates/delete_client.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block title%}Delete client{% endblock %}
 {% block content %}
 <div class="row">
     <div class="col-sm-4">
@@ -26,9 +27,30 @@
                     </form>
                 </div> <!-- div form-outlne -->
         </div> <!-- div form-group -->
-        <div class="right-panel col-sm-4">
-
-        </div>
+    </div>
+    <div class="right-panel right-panel-table col-sm-8">
+            <div class="table-view-quick-access-invoices">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th><h5>Clients</h5></th>
+                            <th></th>
+                        </tr>
+                        <tr>
+                            <th>Client name</th>
+                            <th>Client ID</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for client in clients %}
+                        <tr>
+                            <td><a href="{{ url_for('view_client', client_id=client.client_id) }}">{{client.name}}</a></td>
+                            <td><a href="{{ url_for('view_client', client_id=client.client_id) }}">{{client.client_id}}</a></td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
     </div>
 </div>
 
