--- a/templates/delete_invoice.html
+++ b/templates/delete_invoice.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block title%}Delete invoice{% endblock %}
 {% block content %}
 <div class="row">
     <div class="col-sm-4">
