--- a/templates/delete_invoice_confirmation.html
+++ b/templates/delete_invoice_confirmation.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block title%}Delete invoice{% endblock %}
 {% block content %}
 <div class="col-lg-6">
     <h2>Do you wish to delete Invoice : {{invoice.invoice_id}}</h2>
