--- a/templates/delete_invoice_line.html
+++ b/templates/delete_invoice_line.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block title%}Delete invoice line{% endblock %}
 {% block content %}
 <div class="row">
     <div class="col-sm-4">
@@ -60,7 +61,7 @@
                     <tbody>
                         {% for invoice in invoices %}
                         <tr>
-                            <td>{{invoice[0].invoice_id}}</td>
+                            <td><a href="{{ url_for('view_invoice', invoice_id=invoice[0].invoice_id) }}">{{invoice[0].invoice_id}}</a></td>
                             <td>{{invoice[0].client_id}}</td>
                             <td>{{invoice.name}}</td>
                             <td>{{invoice[0].total}}</td>
