--- a/templates/delete_item_confirmation.html
+++ b/templates/delete_item_confirmation.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block title%}Delete item{% endblock %}
 {% block content %}
 <div class="col-lg-6">
     <h3>Do you wish to delete : Name: {{item.item_name}} - Price: {{item.item_price}}</h3>
