--- a/templates/edit_invoice_line_information.html
+++ b/templates/edit_invoice_line_information.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block title%}Edit invoice line{% endblock %}
 {% block content %}
 <div class="row">
     <div class="col-sm-4">
