--- a/templates/edit_item.html
+++ b/templates/edit_item.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block title%}Edit item{% endblock %}
 {% block content %}
 <div class="row">
     <div class="col-sm-4">
