--- a/templates/view_invoices.html
+++ b/templates/view_invoices.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block title%}View invoices{% endblock %}
 {% block content %}
 <div class="view">
     <div class="page-content">
