--- a/templates/view_invoices_by_id.html
+++ b/templates/view_invoices_by_id.html
@@ -1,5 +1,5 @@
 {% extends 'view_invoices.html' %}
-{% block title%} Search invoice {% endblock%}
+{% block title%} View invoices {% endblock%}
 {% block request_view %}
     <div class="overflow-hidden">
         <div class="views_form">
